--- a/views/users_list.html
+++ b/views/users_list.html
@@ -81,12 +81,10 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="btn-group">
-								<button id="sample_editable_1_new" class="btn sbold green"> Add New
-									<i class="fa fa-plus"></i>
-								</button>
+								<a href="#" data-target="#myModal_autocomplete" role="button" class="btn sbold green" data-toggle="modal"> Add new <i class="fa fa-plus"></i> </a>								
 							</div>
 						</div>
-						<div class="col-md-6">
+						<!--div class="col-md-6">
 							<div class="pagination-control pull-right">
 								<span class="pagination-info"> 1-30 of 789 </span>
 								<a class="btn btn-sm blue btn-outline">
@@ -96,7 +94,7 @@
 									<i class="fa fa-angle-right"></i>
 								</a>
 							</div>
-						</div>
+						</div-->
 					</div>
 				</div>
 				<div class="portlet-body flip-scroll">
@@ -126,22 +124,7 @@
 										<ul class="dropdown-menu pull-left" role="menu">
 											<li>
 												<a href="javascript:;">
-													<i class="icon-docs"></i> New Post </a>
-											</li>
-											<li>
-												<a href="javascript:;">
-													<i class="icon-tag"></i> New Comment </a>
-											</li>
-											<li>
-												<a href="javascript:;">
-													<i class="icon-user"></i> New User </a>
-											</li>
-											<li class="divider"> </li>
-											<li>
-												<a href="javascript:;">
-													<i class="icon-flag"></i> Comments
-													<span class="badge badge-success">4</span>
-												</a>
+													<i class="icon-user"></i> Crear cargo </a>
 											</li>
 										</ul>
 									</div>
@@ -156,3 +139,64 @@
 	</div>
 </div>
 <!-- END MAIN CONTENT -->
+<div id="myModal_autocomplete" class="modal fade" role="dialog" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+				<h4 class="modal-title">Registro de usuario</h4>
+			</div>
+			<div class="modal-body form">
+				<form action="javascript:;" method="post" class="form-horizontal" ng-submit="register($event, user)">
+					<div class="form-body">
+						<div class="form-group">
+							<label class="col-md-3 control-label">Email</label>
+							<div class="col-md-8">
+								<input type="email" required class="form-control spinner" placeholder="Ej. new@kangu.com.co" ng-model="user.email"> </div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">Contraseña</label>
+							<div class="col-md-8">
+								<input type="password" required class="form-control spinner" placeholder="Ej. **********" ng-model="user.password"> </div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">Direccion</label>
+							<div class="col-md-8">
+								<input type="text" required class="form-control" placeholder="Ej. Cra 12 # 54-85" ng-model="user.address_description">
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">Nombre</label>
+							<div class="col-md-8">
+								<input type="text" required class="form-control" placeholder="Ej. Jeff" ng-model="user.name">
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">Apellido</label>
+							<div class="col-md-8">
+								<input type="text" required class="form-control" placeholder="Ej. Saa" ng-model="user.lastname">
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">Telefono</label>
+							<div class="col-md-8">
+								<input type="number" required class="form-control" placeholder="Ej. 3000000" ng-model="user.phone">
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">CC</label>
+							<div class="col-md-8">
+								<input type="number" required class="form-control" placeholder="Ej. 123123" ng-model="user.cc">
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+						<button type="submit" class="btn btn-primary">
+							<i class="fa fa-check"></i> Registrar</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+</div>
