--- a/views/providers.html
+++ b/views/providers.html
@@ -150,6 +150,23 @@
 								<input type="text" required class="form-control spinner" placeholder="Ej. Frutas" ng-model="categorie.name"> </div>
 						</div>
 					</div>
+					<div class="form-body">
+						<div class="form-group">
+							<label class="col-md-3 control-label">Nombre</label>
+							<div class="col-md-8">
+								<angucomplete-alt
+									id="providerId"
+									field-required="true"
+									input-name="provider"
+									placeholder="Busqueda de proveedor"
+									pause="100"
+									selected-object="providerSelected"
+									remote-api-handler="searchProvider"
+									title-field="provider.name"
+									minlength="1"
+									inputclass="form-control form-control-small"/>
+						</div>
+					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
 						<button type="submit" class="btn btn-primary">
