Create variant ready

--- a/views/products.html
+++ b/views/products.html
@@ -120,7 +120,7 @@
 										</button>
 										<ul class="dropdown-menu pull-left" role="menu">
 											<li>
-												<a href="#" data-target="#charge_modal" ng-click="selectUser(user)" data-toggle="modal">
+												<a href="#" ui-sref="show_product({id: p.product.id})">
 													<i class="icon-user"></i> Ver detalles </a>
 											</li>
 										</ul>
@@ -136,7 +136,7 @@
 	</div>
 </div>
 <!-- END MAIN CONTENT -->
-<!-- BEGIN REGISTER MODAL  -->
+<!-- BEGIN CREATE PRODUCT MODAL  -->
 <div id="register_modal" class="modal fade" role="dialog" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
@@ -186,4 +186,4 @@
 		</div>
 	</div>
 </div>
-<!-- END REGISTER MODAL  -->
+<!-- END CREATE PRODUCT MODAL  -->
