User email overflow fixed

--- a/views/show_product.html
+++ b/views/show_product.html
@@ -141,8 +141,8 @@
 										</button>
 										<ul class="dropdown-menu pull-left" role="menu">
 											<li>
-												<a href="#" ui-sref="show_product({id: p.product.id})">
-													<i class="icon-user"></i> Ver detalles </a>
+												<a href="#" ui-sref="variant_providers({variant_id: v.id, product_id: product.product.id})">
+													<i class="icon-user"></i> Proveedores </a>
 											</li>
 										</ul>
 									</div>
