--- a/views/show_product.html
+++ b/views/show_product.html
@@ -85,7 +85,7 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="btn-group">
-								<a href="#" data-target="#register_modal" role="button" class="btn sbold green" data-toggle="modal"> Add new <i class="fa fa-plus"></i> </a>								
+								<a href="#" data-target="#create_variant_modal" role="button" class="btn sbold green" data-toggle="modal"> Add new <i class="fa fa-plus"></i> </a>								
 							</div>
 						</div>
 						<!--div class="col-md-6">
@@ -144,6 +144,10 @@
 												<a href="#" ui-sref="variant_providers({variant_id: v.id, product_id: product.product.id})">
 													<i class="icon-user"></i> Proveedores </a>
 											</li>
+											<li>
+												<a href="#" data-target="#update_variant_modal" role="button" data-toggle="modal" ng-click="editing(v)">
+													<i class="icon-user"></i> Editar </a>
+											</li>
 										</ul>
 									</div>
 								</td>
@@ -158,7 +162,7 @@
 </div>
 <!-- END MAIN CONTENT -->
 <!-- BEGIN CREATE PRODUCTVARIANT MODAL  -->
-<div id="register_modal" class="modal fade" role="dialog" aria-hidden="true">
+<div id="create_variant_modal" class="modal fade" role="dialog" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -251,3 +255,97 @@
 	</div>
 </div>
 <!-- END CREATE PRODUCTVARIANT MODAL  -->
+<!-- BEGIN CREATE UPDATEVARIANT MODAL  -->
+<div id="update_variant_modal" class="modal fade" role="dialog" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+				<h4 class="modal-title">Actualizacion de variante</h4>
+			</div>
+			<div class="modal-body form">
+				<form action="javascript:;" method="post" class="form-horizontal" ng-submit="updateVariant($event, temp_variant)">
+					<div class="form-body">
+						<div class="form-group">
+							<label class="col-md-3 control-label">Nombre:</label>
+							<div class="col-md-8">
+								<input type="text" required class="form-control spinner" placeholder="Ej. Papa" ng-model="temp_variant.name"> </div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">Precio entrada:</label>
+							<div class="col-md-8">
+								<input type="number" required class="form-control spinner" placeholder="Ej. $130" ng-model="temp_variant.entry_price">
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="col-md-4">
+								<input type="number" required class="form-control spinner" placeholder="Business percent" ng-model="temp_variant.business_percent">
+							</div>
+							<div class="col-md-4">
+								<input type="number" required class="form-control spinner" placeholder="Business Gain" ng-model="temp_variant.business_gain">
+							</div>
+							<div class="col-md-4">
+								<input type="text" class="form-control spinner" value="{{getTotalPrice(temp_variant.entry_price, temp_variant.business_percent, temp_variant.business_gain) | currency:'$':0}}" placeholder="Total" disabled>
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="col-md-4">
+								<input type="number" required class="form-control spinner" placeholder="Natural percent" ng-model="temp_variant.natural_percent">
+							</div>
+							<div class="col-md-4">
+								<input type="number" required class="form-control spinner" placeholder="Natural Gain" ng-model="temp_variant.natural_gain">
+							</div>
+							<div class="col-md-4">
+								<input type="text" class="form-control spinner" value="{{getTotalPrice(temp_variant.entry_price, temp_variant.natural_percent, temp_variant.natural_gain) | currency:'$':0}}" placeholder="Total" disabled>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">Peso unidad:</label>
+							<div class="col-md-8">
+								<input type="number" required class="form-control spinner" placeholder="Ej. 3" ng-model="temp_variant.unit_measurement">
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">Cantidad default:</label>
+							<div class="col-md-8">
+								<input type="number" required class="form-control spinner" placeholder="Ej. 4" ng-model="temp_variant.default_quantity">
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">IVA:</label>
+							<div class="col-md-8">
+								<input type="number" min="0" required class="form-control spinner" placeholder="Ej. 5" ng-model="temp_variant.iva">
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">Descripcion:</label>
+							<div class="col-md-8">
+								<input type="text" required class="form-control spinner" placeholder="Ej. 5 por lata" ng-model="temp_variant.description">
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">Imagen</label>
+							<div class="col-md-8">
+									<div ng-hide="temp_variant.photo" class="fileinput-new thumbnail" style="width: 200px; height: 150px;">
+										<img ng-src="{{variantImageUrl(temp_variant.original_image)}}" err-src="http://google.com/favicon.ico" alt="" />
+									</div>
+									<img class="fileinput-preview thumbnail" ngf-thumbnail="temp_variant.photo" style="max-width: 200px; max-height: 150px;"> </img>
+									<div>
+										<div class="btn default btn-file" ngf-select ng-model="temp_variant.photo" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-resize-if="false">
+											Select image
+										</div>
+									</div>
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+						<button type="submit" class="btn btn-primary">
+							<i class="fa fa-check"></i> Actualizar</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- END CREATE UPDATEVARIANT MODAL  -->
