--- a/views/income_expenses.html
+++ b/views/income_expenses.html
@@ -3,11 +3,11 @@
 	<ul class="page-breadcrumb">
 		<li>
 			<i class="fa fa-home"></i>
-			<a ui-sref="dashboard_menu">Tienda</a>
+			<a ui-sref="dashboard_menu">Home</a>
 			<i class="fa fa-angle-right"></i>
 		</li>
 		<li>
-			<a ui-sref="providers_menu">Proveedores</a>
+			<a href="#">Ingresos-Egresos</a>
 		</li>
 	</ul>
 	<div class="page-toolbar">
@@ -47,7 +47,7 @@
 		</div>
 	</div>
 </div>
-<h3 class="page-title"> Proveedores</h3>
+<h3 class="page-title"> Ingresos-Egresos</h3>
 <!-- END PAGE HEADER-->
 <!-- BEGIN MAIN CONTENT -->
 <div class="row">
@@ -57,14 +57,14 @@
 			<div class="portlet-title">
 				<div class="caption font-dark">
 					<i class="icon-settings font-dark"></i>
-					<span class="caption-subject bold uppercase"> Tabla de listado</span>
+					<span class="caption-subject bold uppercase"> Tabla de registros</span>
 				</div>
 				<div class="actions">
 					<div class="inbox-body">
 						<div class="inbox-header">
 							<form class="form-inline pull-right" action="index.html">
 								<div class="input-group input-medium">
-									<input type="text" class="form-control" placeholder="Nombre">
+									<input type="text" class="form-control" placeholder="Email">
 									<span class="input-group-btn">
 										<button type="submit" class="btn green">
 											<i class="fa fa-search"></i>
@@ -81,35 +81,39 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="btn-group">
-								<a href="#" data-target="#createprovider_modal" role="button" class="btn sbold green" data-toggle="modal"> Add new <i class="fa fa-plus"></i> </a>								
+								<a href="#" data-target="#create_ie_modal" role="button" class="btn sbold green" data-toggle="modal"> Add new <i class="fa fa-plus"></i> </a>								
 							</div>
 						</div>
 						<!--div class="col-md-6">
 							<div class="pagination-control pull-right">
-								<span class="pagination-info"> 1-30 of 789 </span>
-								<a class="btn btn-sm blue btn-outline">
+								<span class="pagination-info"> {{headers.current_page}} of {{headers.pages_count}} page(s)</span>
+								<a class="btn btn-sm blue btn-outline" ng-click="getUsers(-1)">
 									<i class="fa fa-angle-left"></i>
 								</a>
-								<a class="btn btn-sm blue btn-outline">
+								<a class="btn btn-sm blue btn-outline" ng-click="getUsers(1)">
 									<i class="fa fa-angle-right"></i>
 								</a>
 							</div>
 						</div-->
 					</div>
 				</div>
-				<div class="portlet-body flip-scroll">
+				<!--div class="portlet-body flip-scroll">
 					<table class="table table-striped table-bordered table-hover table-checkable order-column flip-content">
 						<thead class="flip-content">
 							<tr>
+								<th> Email </th>
 								<th> Nombre </th>
-								<th> Ult. Actualizacion </th>
+								<th> Apellido </th>
+								<th> Telefono </th>
 								<th> Actions </th>
 							</tr>
 						</thead>
 						<tbody>
-							<tr class="odd gradeX" ng-repeat="provider in providers">
-								<td> {{provider.name | capitalize}} </td>
-								<td> {{provider.updated_at | date : medium}} </td>
+							<tr class="odd gradeX" ng-repeat="user in users">
+								<td> {{user.email | limitTo: 16}} </td>
+								<td> {{user.name | capitalize}} </td>
+								<td> {{user.lastname | capitalize}} </td>
+								<td> {{user.phone}} </td>
 								<td>
 									<div class="btn-group">
 										<button class="btn btn-xs green dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false"> Actions
@@ -117,8 +121,8 @@
 										</button>
 										<ul class="dropdown-menu pull-left" role="menu">
 											<li>
-												<a href="#">
-													<i class="icon-user"></i> Detalles </a>
+												<a href="#" data-target="#charge_modal" ng-click="selectUser(user)" data-toggle="modal">
+													<i class="icon-user"></i> Crear cargo </a>
 											</li>
 										</ul>
 									</div>
@@ -126,33 +130,64 @@
 							</tr>							
 						</tbody>
 					</table>
-				</div>
+				</div-->
 			</div>
 		</div>
 		<!-- END EXAMPLE TABLE PORTLET-->
 	</div>
 </div>
 <!-- END MAIN CONTENT -->
-<!-- BEGIN CREATE CATEGORIE MODAL  -->
-<div id="createprovider_modal" class="modal fade" role="dialog" aria-hidden="true">
+<!-- BEGIN REGISTER MODAL  -->
+<div id="create_ie_modal" class="modal fade" role="dialog" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-				<h4 class="modal-title">Crear proveedor</h4>
+				<h4 class="modal-title">Crear registro</h4>
 			</div>
 			<div class="modal-body form">
-				<form action="javascript:;" method="post" class="form-horizontal" ng-submit="createProvider($event, provider)">
+				<form action="javascript:;" method="post" class="form-horizontal" ng-submit="createRegister($event, register)">
 					<div class="form-body">
 						<div class="form-group">
-							<label class="col-md-3 control-label">Nombre</label>
-							<div class="col-md-8">
-								<input type="text" required class="form-control spinner" placeholder="Ej. CarnesProv" ng-model="provider.name"> </div>
+							<label class="col-md-3 control-label">Fecha</label>
+							<div class="col-md-9">
+								<input type="date" ng-model="register.date">
+							</div>
 						</div>
-					</div>
-					<div class="form-body">
 						<div class="form-group">
-							<label class="col-md-3 control-label">Usuario</label>
+							<label class="col-md-3 control-label">Monto</label>
+							<div class="col-md-9">
+								<input type="number" ng-model="register.total">
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">Tipo de movimiento</label>
+							<div class="col-md-9">
+								<select class="form-control" ng-model="register.mov_type">
+									<option value="0">Ingreso</option>
+									<option value="1">Egreso</option>
+								</select>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">Tipo de area</label>
+							<div class="col-md-9">
+								<select class="form-control" ng-model="register.source_type">
+									<option value="0">Otros</option>
+								</select>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">Tipo de tercero</label>
+							<div class="col-md-9">
+								<select class="form-control" ng-model="register.third_type">
+									<option value="0">Juridico</option>
+									<option value="1">Natural</option>
+								</select>
+							</div>
+						</div>	
+						<div class="form-group">
+							<label class="col-md-3 control-label">Tercero</label>
 							<div class="col-md-8">
 								<angucomplete-alt
 									id="providerId"
@@ -160,23 +195,37 @@
 									input-name="provider"
 									placeholder="Busqueda de usuario"
 									pause="100"
-									selected-object="UserSelected"
+									selected-object="ThirdSelected"
 									remote-api-handler="searchUser"
 									title-field="name"
 									description-field="lastname"
 									minlength="1"
-									inputclass="form-control spinner"/>
+									inputclass="form-control spinner"
+									ng-show="register.third_type == 1"/>
+								<angucomplete-alt
+									id="providerId"
+									field-required="true"
+									input-name="provider"
+									placeholder="Busqueda de negocio"
+									pause="100"
+									selected-object="ThirdSelected"
+									remote-api-handler="searchBusiness"
+									title-field="name"
+									description-field="lastname"
+									minlength="1"
+									inputclass="form-control spinner"
+									ng-show="register.third_type == 0"/>
 							</div>
-						</div>
+						</div>				
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
 						<button type="submit" class="btn btn-primary">
-							<i class="fa fa-check"></i> Crear</button>
+							<i class="fa fa-check"></i> Registrar</button>
 					</div>
 				</form>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- END CREATE CATEGORIE MODAL  -->
+<!-- END REGISTER MODAL  -->
