--- a/views/business_place.html
+++ b/views/business_place.html
@@ -7,7 +7,7 @@
 			<i class="fa fa-angle-right"></i>
 		</li>
 		<li>
-			<a ui-sref="users_menu">Users</a>
+			<a href="#">Negocios</a>
 		</li>
 	</ul>
 	<div class="page-toolbar">
