SupervisorDashboard little changes

--- a/views/supervisor_dashboard.html
+++ b/views/supervisor_dashboard.html
@@ -55,6 +55,13 @@
 						</div>
 					</div>
 				</li>
+				<li class="list_none_style" ng-show="orders.received.length == 0">
+					<div class="portlet-body">
+						<div class="well well-sm">
+							<h4>Todo tranquilo aqui</h4>
+						</div>
+					</div>
+				</li>
 			</ul>
 		</div>
 	</div>
